--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@supabase/supabase-js": "^2.32.0",
     "bootstrap": "^5.3.1",
     "paperizer": "^0.1.6",
+    "register-service-worker": "^1.7.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue-sweetalert2": "^5.0.5",
@@ -24,6 +25,7 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vue/cli-plugin-pwa": "~4.5.15",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^8.45.0",
@@ -32,6 +34,7 @@
     "prettier": "^3.0.0",
     "sass": "^1.66.1",
     "vite": "^4.4.6",
+    "vite-plugin-pwa": "^0.17.4",
     "vitest": "^0.33.0"
   }
 }
